ecmascript/parser/tests/test262-error-references/fail/50efa1f220e37136.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/50efa1f220e37136.js:1:7
  |
1 | { ;  ;  
  |       ^

